[gd_scene load_steps=15 format=3 uid="uid://cbmtdg866hhdr"]

[ext_resource type="Script" uid="uid://dn04vbnrxjw6w" path="res://pantalla_fin.gd" id="1_fodjw"]
[ext_resource type="Texture2D" uid="uid://tb6txabf3wjb" path="res://assets/fin/fin.png" id="1_uj3ng"]
[ext_resource type="Texture2D" uid="uid://dj5jpjmmrno3h" path="res://assets/tutorial/libro.png" id="2_fodjw"]
[ext_resource type="FontFile" uid="uid://bf4lr1hbjkhdr" path="res://assets/DungeonFont.ttf" id="3_6yf1o"]
[ext_resource type="Texture2D" uid="uid://chm1ba67nm663" path="res://assets/hud/hud.png" id="5_6yf1o"]

[sub_resource type="LabelSettings" id="LabelSettings_uj3ng"]
font = ExtResource("3_6yf1o")
font_size = 81
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_edvot"]
texture = ExtResource("2_fodjw")
expand_margin_left = 54.0
expand_margin_top = 135.0
expand_margin_right = 54.0
expand_margin_bottom = 172.0

[sub_resource type="LabelSettings" id="LabelSettings_fodjw"]
font = ExtResource("3_6yf1o")
font_size = 18
font_color = Color(0, 0, 0, 1)
outline_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yt7tb"]
font = ExtResource("3_6yf1o")
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_yajvv"]
font = ExtResource("3_6yf1o")
font_size = 36
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_6yf1o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FinalPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_fodjw"]
resource_name = "show"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FinalPanel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_edvot"]
_data = {
&"RESET": SubResource("Animation_6yf1o"),
&"show": SubResource("Animation_fodjw")
}

[sub_resource type="LabelSettings" id="LabelSettings_edvot"]
font = ExtResource("3_6yf1o")
font_size = 54
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="PantallaFin" type="CanvasLayer"]
script = ExtResource("1_fodjw")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_uj3ng")
expand_mode = 4

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 48.0
offset_right = 200.0
offset_bottom = 130.0
grow_horizontal = 2
text = "Enhorabuena!"
label_settings = SubResource("LabelSettings_uj3ng")

[node name="Label2" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.0
offset_top = 200.0
offset_right = 246.0
offset_bottom = 282.0
grow_horizontal = 2
text = "Tus Resultados"
label_settings = SubResource("LabelSettings_uj3ng")

[node name="FinalPanel" type="PanelContainer" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -296.0
offset_top = -552.0
offset_right = 456.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.8, 0.63)
size_flags_horizontal = 4
theme_override_styles/panel = SubResource("StyleBoxTexture_edvot")

[node name="MarginContainer" type="MarginContainer" parent="FinalPanel"]
layout_mode = 2
theme_override_constants/margin_left = 55
theme_override_constants/margin_top = 70

[node name="HBoxContainer" type="HBoxContainer" parent="FinalPanel/MarginContainer"]
custom_minimum_size = Vector2(648, 488)
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="ScoreText" type="Label" parent="FinalPanel/MarginContainer/HBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_fodjw")

[node name="Hoja" type="Label" parent="FinalPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 480)
layout_mode = 2
size_flags_horizontal = 2
label_settings = SubResource("LabelSettings_yt7tb")
autowrap_mode = 1

[node name="Hoja2" type="Label" parent="FinalPanel/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 480)
layout_mode = 2
size_flags_horizontal = 2
label_settings = SubResource("LabelSettings_yajvv")
autowrap_mode = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_edvot")
}
autoplay = "show"

[node name="TextureButton" type="TextureButton" parent="."]
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.88
anchor_right = 0.51
anchor_bottom = 0.88
offset_left = -200.0
offset_top = -32.0001
offset_right = 600.0
offset_bottom = 95.9999
grow_horizontal = 2
grow_vertical = 0
scale = Vector2(0.5, 0.5)
texture_normal = ExtResource("5_6yf1o")
stretch_mode = 0

[node name="Label" type="Label" parent="TextureButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -249.5
offset_top = -27.5
offset_right = 249.5
offset_bottom = 27.5
grow_horizontal = 2
grow_vertical = 2
text = "Ver Informacion General"
label_settings = SubResource("LabelSettings_edvot")

[connection signal="pressed" from="TextureButton" to="." method="_on_texture_button_pressed"]
